--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,10 @@
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
     "prettier/prettier": "error",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      { "argsIgnorePattern": "_" }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
