--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,12 @@ MAIL_DRIVER=ethereal
 
 # AWS_ACCESS_KEY_ID=
 # AWS_SECRET_ACCESS_KEY=
+
+STORAGE_DRIVER=disk
+
+# cache
+
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASS=
+
