--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -29,9 +29,11 @@
     "react-hooks/exhaustive-deps": "warn",
     "no-unused-expressions": "off",
     "react/prop-types": "off",
+    "@typescript-eslint/camelcase": "off",
     "react/jsx-props-no-spreading": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "import/prefer-default-export": "off",
+    "import/no-duplicates": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
